--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "django_frontend_integration",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start --single-run",
+    "test-watch": "karma start"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.0"
+  },
+  "devDependencies": {
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2"
   }
 }
