--- a/package.json
+++ b/package.json
@@ -14,7 +14,29 @@
     "jasmine-core": "^2.4.1",
     "karma": "^1.2.0",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-jasmine": "^1.0.2"
+    "karma-jasmine": "^1.0.2",
+    "apache-server-configs": "^2.7.1",
+    "babel-core": "^6.0.15",
+    "babel-preset-es2015": "^6.0.15",
+    "del": "^2.0.2",
+    "eslint-config-google": "^0.3.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.0.0",
+    "gulp-cache": "0.2.2",
+    "gulp-concat": "^2.5.2",
+    "gulp-cssnano": "^2.0.0",
+    "gulp-eslint": "^1.0.0",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.0.0",
+    "gulp-load-plugins": "^1.0.0",
+    "gulp-newer": "^1.0.0",
+    "gulp-sass": "^2.0.0",
+    "gulp-size": "^2.0.0",
+    "gulp-sourcemaps": "^1.3.0",
+    "gulp-uglify": "^1.0.1",
+    "gulp-useref": "^3.0.0",
+    "run-sequence": "^1.0.1"
   },
   "version": "1.1.0"
 }
