--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "homepage": "https://github.com/kashiro/django_frontend_integration",
   "scripts": {
     "test": "karma start --single-run",
-    "test-watch": "karma start"
+    "test-watch": "karma start",
+    "build": "gulp",
+    "watch": "gulp watch"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.0"
   },
   "devDependencies": {
-    "jasmine-core": "^2.4.1",
-    "karma": "^1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-jasmine": "^1.0.2",
     "apache-server-configs": "^2.7.1",
     "babel-core": "^6.0.15",
     "babel-preset-es2015": "^6.0.15",
@@ -31,12 +29,20 @@
     "gulp-imagemin": "^2.0.0",
     "gulp-load-plugins": "^1.0.0",
     "gulp-newer": "^1.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.0",
     "gulp-size": "^2.0.0",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.1",
     "gulp-useref": "^3.0.0",
-    "run-sequence": "^1.0.1"
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2",
+    "psi": "^2.0.4",
+    "run-sequence": "^1.0.1",
+    "sw-precache": "^4.1.0",
+    "sw-toolbox": "^3.3.0"
   },
   "version": "1.1.0"
 }
